--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8" />
-      <title>StarDB</title>
-      <link
-         rel="stylesheet"
-         href="https://bootswatch.com/4/darkly/bootstrap.min.css"
-      />
-   </head>
-   <body>
-      <div id="root"></div>
-   </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>StarDB</title>
+    <!-- <link rel="stylesheet" src="index.css" /> -->
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
